Colaboratory를 통해 생성됨

--- a/Tokenizing.ipynb
+++ b/Tokenizing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Tokenizing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMu8cio8XxZIJxp3atzQ2Ze",
+      "authorship_tag": "ABX9TyMEnpEj/qCwdenRl80gX1P7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,45 +34,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a3WDmF-GRfHA",
-        "outputId": "99c859dc-de6a-4442-93a4-ad3cd00298ef"
+        "outputId": "47f2acca-537a-49c1-8b39-a12a75acf043"
       },
       "source": [
         "!pip install konlpy -q"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting konlpy\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/85/0e/f385566fec837c0b83f216b2da65db9997b35dd675e107752005b7d392b1/konlpy-0.5.2-py2.py3-none-any.whl (19.4MB)\n",
-            "\u001b[K     |████████████████████████████████| 19.4MB 1.3MB/s \n",
-            "\u001b[?25hCollecting beautifulsoup4==4.6.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/9e/d4/10f46e5cfac773e22707237bfcd51bbffeaf0a576b0a847ec7ab15bd7ace/beautifulsoup4-4.6.0-py3-none-any.whl (86kB)\n",
-            "\u001b[K     |████████████████████████████████| 92kB 8.2MB/s \n",
-            "\u001b[?25hCollecting JPype1>=0.7.0\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/98/88/f817ef1af6f794e8f11313dcd1549de833f4599abcec82746ab5ed086686/JPype1-1.3.0-cp37-cp37m-manylinux_2_5_x86_64.manylinux1_x86_64.whl (448kB)\n",
-            "\u001b[K     |████████████████████████████████| 450kB 37.1MB/s \n",
-            "\u001b[?25hRequirement already satisfied: numpy>=1.6 in /usr/local/lib/python3.7/dist-packages (from konlpy) (1.19.5)\n",
-            "Requirement already satisfied: tweepy>=3.7.0 in /usr/local/lib/python3.7/dist-packages (from konlpy) (3.10.0)\n",
-            "Collecting colorama\n",
-            "  Downloading https://files.pythonhosted.org/packages/44/98/5b86278fbbf250d239ae0ecb724f8572af1c91f4a11edf4d36a206189440/colorama-0.4.4-py2.py3-none-any.whl\n",
-            "Requirement already satisfied: lxml>=4.1.0 in /usr/local/lib/python3.7/dist-packages (from konlpy) (4.2.6)\n",
-            "Requirement already satisfied: typing-extensions; python_version < \"3.8\" in /usr/local/lib/python3.7/dist-packages (from JPype1>=0.7.0->konlpy) (3.7.4.3)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy>=3.7.0->konlpy) (1.15.0)\n",
-            "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.7/dist-packages (from tweepy>=3.7.0->konlpy) (2.23.0)\n",
-            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tweepy>=3.7.0->konlpy) (1.3.0)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (2021.5.30)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (1.24.3)\n",
-            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6; extra == \"socks\" in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy>=3.7.0->konlpy) (1.7.1)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->tweepy>=3.7.0->konlpy) (3.1.1)\n",
-            "Installing collected packages: beautifulsoup4, JPype1, colorama, konlpy\n",
-            "  Found existing installation: beautifulsoup4 4.6.3\n",
-            "    Uninstalling beautifulsoup4-4.6.3:\n",
-            "      Successfully uninstalled beautifulsoup4-4.6.3\n",
-            "Successfully installed JPype1-1.3.0 beautifulsoup4-4.6.0 colorama-0.4.4 konlpy-0.5.2\n"
+            "\u001b[K     |████████████████████████████████| 19.4MB 1.5MB/s \n",
+            "\u001b[K     |████████████████████████████████| 92kB 7.7MB/s \n",
+            "\u001b[K     |████████████████████████████████| 450kB 35.1MB/s \n",
+            "\u001b[?25h"
           ],
           "name": "stdout"
         }
@@ -132,7 +107,7 @@
         "s = kkma.sentences(sentences)\n",
         "print(s)"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,6 +133,156 @@
         "- VV: 동사\n",
         "- EFN: 평서형 종결 어미\n",
         "- SF: 마침표, 물음표, 느낌표"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NP9yNf9AzveL"
+      },
+      "source": [
+        "## Komoran\n",
+        "- `morphs(phrase)`: 형태소 단위로 토크나이징, 리스트 형태로 반환\n",
+        "- `nouns(phrase)`: 명사인 토큰만 추출\n",
+        "- `pos(phrase, flatten=True)`: 형태소 추출 후 품사 태깅"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YWipSg67z2q4",
+        "outputId": "59548a39-9447-45aa-9a9e-a2d2083477ca"
+      },
+      "source": [
+        "from konlpy.tag import Komoran\n",
+        "\n",
+        "# 코모란 형태소 분석기 객체 생성\n",
+        "komoran = Komoran()\n",
+        "\n",
+        "text = '아버지가 방에 들어갑니다.'\n",
+        "\n",
+        "# 형태소 추출\n",
+        "morphs = komoran.morphs(text)\n",
+        "print(morphs)\n",
+        "\n",
+        "# 형태소와 품사 태그 추출\n",
+        "pos = komoran.pos(text)\n",
+        "print(pos)\n",
+        "\n",
+        "# 명사만 추출\n",
+        "nouns = komoran.nouns(text)\n",
+        "print(nouns)"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['아버지', '가', '방', '에', '들어가', 'ㅂ니다', '.']\n",
+            "[('아버지', 'NNG'), ('가', 'JKS'), ('방', 'NNG'), ('에', 'JKB'), ('들어가', 'VV'), ('ㅂ니다', 'EF'), ('.', 'SF')]\n",
+            "['아버지', '방']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1hOjEnMC0Xw8"
+      },
+      "source": [
+        "- NNG: 일반 명사\n",
+        "- JKS: 주격 조사\n",
+        "- JKM: 부사격 조사\n",
+        "- VV: 동사\n",
+        "- EF: 종결 어미\n",
+        "- SF: 마침표, 물음표, 느낌표"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "No16kssO0bfZ"
+      },
+      "source": [
+        "## Okt\n",
+        "- 띄어쓰기가 어느 정도 되어 있는 문장을 빠르게 분석할 때 많이 사용\n",
+        "\n",
+        "- `morphs(phrase)`: 형태소 단위로 토크나이징, 리스트 형태로 반환\n",
+        "- `nouns(phrase)`: 명사인 토큰만 추출\n",
+        "- `pos(phrase, stem=False, join=False)`: 형태소 추출 후 품사 태깅\n",
+        "- `normalize(phrase)`: 입력한 문장을 정규화\n",
+        "    - 예) 정규화 이전: 사랑햌ㅋ\n",
+        "    -     정규화 이후: 사랑해ㅋㅋ\n",
+        "- `phrase(phrase)`: 입력한 문장에서 어구 추출\n",
+        "    - 예) 입력: 오늘 날씨가 좋아요.\n",
+        "    -     출력: ['오늘', '오늘 날씨', '날씨']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8jAcYSZj0hFH",
+        "outputId": "6ee3e93b-d5be-489a-973d-944fa2b0cbe9"
+      },
+      "source": [
+        "from konlpy.tag import Okt\n",
+        "\n",
+        "# Okt 형태소 분석기 객체 생성\n",
+        "okt = Okt()\n",
+        "\n",
+        "text = '아버지가 방에 들어갑니다.'\n",
+        "\n",
+        "# 형태소 추출\n",
+        "morphs = okt.morphs(text)\n",
+        "print(morphs)\n",
+        "\n",
+        "# 형태소와 품사 태그 추출\n",
+        "pos = okt.pos(text)\n",
+        "print(pos)\n",
+        "\n",
+        "# 명사만 추출\n",
+        "nouns = okt.nouns(text)\n",
+        "print(nouns)\n",
+        "\n",
+        "# 정규화, 어구 추출\n",
+        "text = '오늘 날씨가 좋아욬ㅋㅋ'\n",
+        "print(okt.normalize(text))\n",
+        "print(okt.phrases(text))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['아버지', '가', '방', '에', '들어갑니다', '.']\n",
+            "[('아버지', 'Noun'), ('가', 'Josa'), ('방', 'Noun'), ('에', 'Josa'), ('들어갑니다', 'Verb'), ('.', 'Punctuation')]\n",
+            "['아버지', '방']\n",
+            "오늘 날씨가 좋아요ㅋㅋ\n",
+            "['오늘', '오늘 날씨', '좋아욬', '날씨']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Kuhlzv_I1jsd"
+      },
+      "source": [
+        "- Noun: 명사\n",
+        "- Verb: 동사\n",
+        "- Adjective: 형용사\n",
+        "- Josa: 조사\n",
+        "- Punctuation: 구두점"
       ]
     },
     {
